# service-data-gateway-edge

./: .gitignore  .gitmodules  .project-config  .project.config  .project.submodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTEXT.md  LICENSE  LICENSE.tmp.3402.1dbc37205a94  README.md  aclass.env.sh  config.json  config_unknown.json  edge-gateway-design.md  protocol.md  skills-lock.json  项目计划.md  项目说明.md
cmake/: AClass.cmake  Export.h.in  toolchain-armv7.cmake  toolchain-linux-common.cmake  toolchain-x86_64.cmake
docs/: architecture.md  build-script.md  cmake-organization.md  design.md  implementation.md  nanomodbus-flow.md  testing.md
docs/adr/: 0001-error-code-segmentation.md  0002-config-key-path-uses-json-pointer.md  0003-point-table-mmap-binary.md  0004-lua-embedded-scripting.md  0005-pubsub-bus.md  0006-core-layer-owns-event-loop.md  0007-single-thread-coroutine-runtime.md  0008-runtime-value-persistence.md  0009-bus-value-representation.md  0010-thread-safe-extensibility.md
docs/api/: core.md
docs/implementation/: step-01-egw-loop.md
include/DataGatewayEdge/Connectors/: HttpConnector.h  MqttConnector.h
include/DataGatewayEdge/Core/: Config.h  ErrorCodes.h  Logger.h
include/DataGatewayEdge/Data/: ConnectionPool.h  Repository.h
include/DataGatewayEdge/Hub/: DdlExecutor.h  HubEngine.h
include/DataGatewayEdge/Protocol/: FrameBuilder.h  Packet.h
include/DataGatewayHub/Connectors/: HttpConnector.h
include/DataGatewayHub/Core/: Config.h  ErrorCodes.h
include/DataGatewayHub/Data/: ConnectionPool.h  Repository.h
include/DataGatewayHub/Hub/: DdlExecutor.h  HubEngine.h
include/DataGatewayHub/Protocol/: FrameBuilder.h  Packet.h
journal/: 2026-06-03-fileio-pipes.md  2026-06-03.md  2026-06-17.md  TEMPLATE.md  cjson-integration.md  debugging-guide.md  epoll-learning.md  eventfd-learning.md  fopen-vs-open.md  libuv-learning.md  logging-comparison.md  sqlite3-learning.md  transport-bugs.md
openspec/: config.yaml  project.md
openspec/changes/archive/2025-06-05-config-direct-access/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-06-05-config-system-cjson/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-06-05-core-defs-split/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-03-consolidate-docs-to-openspec/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-03-revert-simulator-fifo/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-03-week1-simulator-fifo/: design.md  proposal.md  tasks.md
openspec/changes/cross-platform-build-system/: design.md  tasks.md
openspec/specs/: api-core.md  architecture.md  build-system.md
openspec/specs/build-system-config/: spec.md
openspec/specs/config-direct-access/: spec.md
openspec/specs/config-framework/: spec.md
openspec/specs/core-defs/: spec.md
openspec/specs/env-help/: spec.md
openspec/specs/simulator-fifo/: spec.md
openspec/specs/submodule-config/: spec.md
openspec/specs/submodule-config-file/: spec.md
samples/basic_usage/: CMakeLists.txt  main.cpp
scripts/: build.sh  clean.sh  env.sh  load.sh  release.sh  submodule.sh  toolchain.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt  LEARN.md  data_gen.c  data_gen.h  egw_app.c  egw_app.h  egw_modbus_master.c  egw_modbus_master.h  egw_modbus_slave.c  egw_modbus_slave.h  egw_persist_thread.c  egw_persist_thread.h  egw_route.c  egw_route.h  fifo_writer.c  fifo_writer.h  gateway_app.c  gateway_app.h  gateway_engine.c  gateway_engine.h  main.c  main.cpp  pipe_util.c  pipe_util.h  simulator.c
src/app/src/: main.cpp
src/connectors/: CMakeLists.txt  HttpConnector.cpp  MqttConnector.cpp
src/connectors/src/: HttpConnector.cpp
src/core/: CMakeLists.txt  Config.cpp  ErrorCodes.cpp  Logger.cpp  config.c  egw_bus.c  egw_crc.c  egw_err.c  egw_fsm.c  egw_loop.c  egw_runtime.c
src/core/include/: config.h  egw_bus.h  egw_crc.h  egw_ctype.inc  egw_defs.h  egw_err.inc  egw_fsm.h  egw_loop.h  egw_ptable.h  egw_runtime.h
src/core/include/DataGatewayHub/Core/: Logger.h
src/core/src/: Config.cpp  Logger.cpp
src/data/: CMakeLists.txt  ConnectionPool.cpp  Repository.cpp
src/hub/: CMakeLists.txt  DdlExecutor.cpp  HubEngine.cpp
src/hub/src/: HubEngine.cpp
src/modbus/: CMakeLists.txt  config.h  modbus-private.h  modbus-rtu.c  modbus-tcp.c  modbus.c  nanomodbus.c
src/modbus/include/: modbus-version.h
src/persist/: CMakeLists.txt  egw_persist.c
src/persist/include/: egw_persist.h
src/protocol/: CMakeLists.txt  FrameBuilder.cpp  Packet.cpp  egw_modbus.c  egw_modbus.h  egw_modbus_client.c  egw_modbus_core.c  egw_modbus_server.c  egw_modbus_transport.c  egw_protocol.c  egw_protocol.h  egw_protocol_common.c  egw_protocol_internal.h  egw_protocol_modbus.c
src/protocol/include/: egw_modbus.h  egw_modbus_client.h  egw_modbus_core.h  egw_modbus_server.h  egw_modbus_transport.h  egw_protocol.h
src/protocol/modbus/: CMakeLists.txt
src/protocol/src/: FrameBuilder.cpp  Packet.cpp
src/ptable/: CMakeLists.txt  egw_persist.c  egw_ptable.c  egw_ptable_loader.c
src/ptable/include/: egw_persist.h  egw_ptable.h  egw_ptable_loader.h
src/transport/: CMakeLists.txt  egw_serial.c  egw_tcp.c  egw_transport.c  egw_transport_common.c  egw_transport_internal.h  egw_transport_serial.c  egw_transport_tcp.c
src/transport/include/: egw_serial.h  egw_serial_params.h  egw_tcp.h  egw_transport.h  egw_transport_type.h
src/transport/serial/: CMakeLists.txt
tests/: CMakeLists.txt  test_egw_loop.c  test_serial.c  test_transport.c
tests/connectors/: CMakeLists.txt
tests/connectors/src/: test_http_connector.cpp
tests/core/: CMakeLists.txt
tests/core/src/: test_logger.cpp
tests/data/: CMakeLists.txt
tests/data/src/: test_repository.cpp
tests/hub/: CMakeLists.txt
tests/hub/src/: test_hub_engine.cpp
tests/protocol/: CMakeLists.txt
tests/protocol/src/: test_packet.cpp
tests/transport_sim/: CMakeLists.txt  test_serial.c  test_transport.c  test_uv_helper.h
tools/: init_db.py  virtual_serial.sh
周记录/: week-01.md  模板.md
(+21 files in other folders)
